<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="8dp"
            android:id="@+id/card_view"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="6dp"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="1dp"
                        android:foregroundGravity="center"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"
                        android:contentDescription="@string/description1"
                        android:src="@drawable/bitcoin_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/manrope_regular"
                        android:text="@string/bitcoin_title"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/main_iso_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:fontFamily="@font/manrope_regular"
                        android:text="@string/iso_code"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:gravity="center"
                        android:textAlignment="center"
                        android:id="@+id/main_price_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_bold"
                        android:text="@string/loading_text"
                        android:textSize="50sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="5"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/main_last_update"
                            android:layout_width="0dp"
                            android:layout_weight="4"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/manrope_regular"
                            android:gravity="center_vertical"
                            android:text="@string/loading_text"
                            android:textSize="20sp" />
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="35dp"
                            android:id="@+id/refresh"
                            app:srcCompat="@drawable/ic_baseline_refresh_24"
                            android:layout_gravity="center"
                            />

                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            android:text="@string/last4"
            android:drawablePadding="5dp"
            android:layout_margin="5dp"
            android:id="@+id/lasthint"
            android:drawableStart="@drawable/ic_baseline_history_24"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lasthint"
            android:id="@+id/history_rv"
            android:layout_margin="5dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
